--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
-baseurl = "https://rstories.netlify.app/"
+baseurl = "/"
 languageCode = "en-us"
-title = "A Hugo website"
+title = "R Stories"
 theme = "hugo-lithium"
 googleAnalytics = ""
 disqusShortname = ""
