--- a/config.toml
+++ b/config.toml
@@ -16,8 +16,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     name = "GitHub"
     url = "https://github.com/rstudio/blogdown"
 [[menu.main]]
-    name = "Twitter"
-    url = "https://twitter.com/rstudio"
+    name = "Blog 1"
+    url = "/2020/09/21/periodic-and-average-periodic-returns-of-financial-portfolios-using-r/"
 
 [params]
     description = "A website built through Hugo and blogdown."
