--- a/config.toml
+++ b/config.toml
@@ -13,11 +13,11 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     name = "About"
     url = "/about/"
 [[menu.main]]
-    name = "GitHub"
-    url = "https://github.com/rstudio/blogdown"
+    name = "Webmaster (LinkedIn)"
+    url = "https://www.linkedin.com/in/dawit-aberra-11267b78"
 [[menu.main]]
-    name = "Blog 1"
-    url = "/2020/09/21/periodic-and-average-periodic-returns-of-financial-portfolios-using-r/"
+    name = "R-Bloggers"
+    url = "https://www.r-bloggers.com"
 
 [params]
     description = "A website built through Hugo and blogdown."
