--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     name = "R-Bloggers"
     url = "https://www.r-bloggers.com"
 [[menu.main]]
-    name = "About the Author (LinkedIn)"
+    name = "Webmaster (@LinkedIn)"
     url = "https://www.linkedin.com/in/dawit-aberra-11267b78"
 [params]
     description = "A website built through Hugo and blogdown."
