--- a/config.toml
+++ b/config.toml
@@ -10,7 +10,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     post = "/:year/:month/:day/:slug/"
 
 [[menu.main]]
-    name = "About R-Stories"
+    name = "About R-STORIES"
     url = "/about/"
 [[menu.main]]
     name = "R-Bloggers"
