--- a/config.toml
+++ b/config.toml
@@ -27,8 +27,8 @@ rssLimit = 10
     url = "https://www.linkedin.com/in/dawit-aberra-11267b78"
 
 [params]
-    owner = "Dawit Aberra - Fort Valley State University, Fort Valley, GA-31030.  Email:   aberrad@fvsu.edu"
-    description = "A website built through Hugo and blogdown."
+    owner = "Dawit Aberra - Fort Valley State University, Fort Valley, GA-31030."
+    description = "A website built through Hugo, Blogdown and Netlify."
 
     # options for highlight.js (version, additional languages, and theme)
     highlightjsVersion = "9.12.0"
